# rust-utils

./: Cargo.toml  README.md
src/: lib.rs  or_else_async.rs  to_hashmap_by_key.rs
