[package]
name = "rust-utils"
version = "0.1.0"
edition = "2024"


[lib]
name = "rust_utils"

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }


[features]
default = ["full"]
full = ["or-else-async", "to-hashmap-by-key"]

to-hashmap-by-key = []
or-else-async = []
